<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.landtanin.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Nanodegree Apps!"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:textColor="#303030"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:nestedScrollingEnabled="true"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/Spotify_streamer_text"
                android:id="@+id/spotify_streamer_button"
                android:layout_gravity="center_horizontal"
                android:background="#baed91" />

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/Score_app_text"
                android:id="@+id/scores_app_button"
                android:layout_gravity="center_horizontal"
                android:background="#faf884" />

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/Library_app_text"
                android:id="@+id/library_app_button"
                android:layout_gravity="center_horizontal"
                android:background="#f8b88b" />

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/Build_it_bigger_text"
                android:id="@+id/build_it_bigger_button"
                android:layout_gravity="center_horizontal"
                android:background="#fea3aa" />

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/Xyz_reader_text"
                android:id="@+id/xyz_reader_button"
                android:layout_gravity="center_horizontal"
                android:background="#f2a2e8" />

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/Capstone_text"
                android:id="@+id/capstone_button"
                android:layout_gravity="center_horizontal"
                android:background="#b2cefe" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
